DataStructures combined codelab03: DepthFirstSearcher done